# netbox-pdns

./: .gitignore  Dockerfile  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/: MIGRATION.md
.github/workflows/: ci.yml  docker.yml  docs.yml  release.yml
docs/: configuration.md  index.md  installation.md  quickstart.md  reliability.md  security.md
netbox_pdns/: __init__.py  __main__.py  api.py  exceptions.py  models.py  mqtt_service.py
tests/: conftest.py
tests/integration/: test_integration.py  test_mqtt_integration_redesigned.py
tests/unit/: test_api.py  test_app.py  test_exceptions.py  test_main.py  test_models.py  test_mqtt_handlers.py  test_mqtt_service.py  test_settings_validation.py  test_startup.py
